v1.8.2 (20/01/2022)
- added 'Porphyromonas gingivalis' to NCBI taxonomy id
- fixed SARS-CoV-2 name in NCBI taxonomy id table

v1.8.1 (19/01/2022)
- fix: event map to sf conversion; ignore existing ligand pdb files

v1.8.0 (17/12/2021)
- added feature for working with cocktails/ combi-soaks: multiple compounds/ smiles separated by semi-colon in db are recognised during restraint generation

v1.7.36 (13/10/2021)
- bug fix: manual selection of different auto-processing results with same pipeline
- removed obsolete paths used for parsing of auto-processing results

v1.7.35 (13/10/2021)
- ignore json merging statistics and xia2.mmcif if aimless.log exists

v1.7.34 (25/06/2021)
- added pdbx_audit_support category for funding agency now required for PDB deposition

v1.7.33 (02/02/2021)
- bug fix: enable RefinementParameters button in XChemCOOT

v1.7.32 (24/01/2021)
- bug fix: XChemDeposit - enable reading of not symlinked logfiles

v1.7.31 (20/01/2021)
- bug fix: XChemDeposit - enable reading of staraniso .table1 file

v1.7.30 (17/12/2020)
- bug fix in XChemDeposit

v1.7.29 (09/12/2020)
- bug fix: syntax error in XChemDeposit
- XChemDeposit: use default pdb_extract if no installation in XChemExplorer_dir

v1.7.28 (25/11/2020)
- added exception to catch 'Cannot allocate memory' error in XChemMain.get_gda_barcodes

v1.7.27 (24/11/2020)
- bug fix: add missing DataProcessingUniqueReflectionsLow/High column to db

v1.7.26 (12/11/2020)
- XChemDeposit: remove \n and \r from smiles string in _diffrn.details

v1.7.25 (11/11/2020)
- convert json logfile from dials into pseudo aimless file for mmcif file preparation (required for pdb-extract)

v1.7.24 (02/11/2020)
- capitalized organism names in NCBI_taxonomy_ID dictionary

v1.7.23 (02/11/2020)
- pandda refinement: stopped sourcing obsolete pandda v0.2.12 at DLS (otherwise refinement update script fails due to missing gemmi library)

v1.7.22 (28/10/2020)
- cosmetic changes to deposition interface